--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,14 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.8
   device_preview: ^1.2.0
+  expandable_page_view: ^1.0.17
   flutter:
     sdk: flutter
   flutter_native_splash: ^2.4.1
+  flutter_screenutil: ^5.9.3
+  font_awesome_flutter: ^10.7.0
   get_it: ^8.0.0
   go_router: ^14.3.0
-  expandable_page_view: ^1.0.17
-  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   change_app_package_name: ^1.4.0
@@ -44,10 +45,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -65,7 +64,7 @@ flutter:
     - family: AfacadFlux
       fonts:
         - asset: assets/fonts/AfacadFlux-Regular.ttf
-        
+
     - family: Gilroy
       fonts:
         - asset: assets/fonts/Gilroy-Regular.ttf
@@ -77,5 +76,3 @@ flutter:
     - family: Poppins
       fonts:
         - asset: assets/fonts/Poppins-Medium.ttf
-
-  
