--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.8
+  curved_navigation_bar: ^1.0.6
   device_preview: ^1.2.0
   expandable_page_view: ^1.0.17
   flutter:
@@ -38,6 +39,8 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   get_it: ^8.0.0
   go_router: ^14.3.0
+  iconly: ^1.0.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   change_app_package_name: ^1.4.0
