--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.1+1
+version: 1.0.2+1
 
 environment:
   sdk: ^3.5.0
@@ -28,12 +28,14 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^8.1.4
   cupertino_icons: ^1.0.8
   curved_navigation_bar: ^1.0.6
   device_preview: ^1.2.0
   expandable_page_view: ^1.0.17
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.6
   flutter_native_splash: ^2.4.1
   flutter_screenutil: ^5.9.3
   font_awesome_flutter: ^10.7.0
