--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   curved_navigation_bar: ^1.0.6
   device_preview: ^1.2.0
   expandable_page_view: ^1.0.17
+  fl_chart: ^0.69.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
@@ -43,6 +44,7 @@ dependencies:
   go_router: ^14.3.0
   iconly: ^1.0.1
   image_picker: ^1.1.2
+
 
 dev_dependencies:
   change_app_package_name: ^1.4.0
