Add RobotoMono Font and Update Theming and UI Components
- Added RobotoMono-Bold.ttf font file to the assets.
- Updated `app_colors.dart` to include a new color constant `switcherBackground`.
- Updated `app_styles.dart` to add new text styles using the RobotoMono font.
- Modified `switcher_view.dart` to set the background color using the new `switcherBackground` color.
- Updated `home_view_body.dart` to include new UI components: `InProgressWord` and `RoundedProgressBar`.
- Added new files `in_progress_list_view.dart` and `in_progress_word.dart` to handle the new UI components.
- Updated `pubspec.yaml` to include the new RobotoMono font family.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,3 +83,7 @@ flutter:
     - family: Poppins
       fonts:
         - asset: assets/fonts/Poppins-Medium.ttf
+        
+    - family: RobotoMono
+      fonts:
+        - asset: assets/fonts/RobotoMono-Bold.ttf
