--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
+  flutter_keyboard_visibility: ^6.0.0
   flutter_native_splash: ^2.4.1
   flutter_screenutil: ^5.9.3
   font_awesome_flutter: ^10.7.0
@@ -45,7 +46,6 @@ dependencies:
   iconly: ^1.0.1
   image_picker: ^1.1.2
   table_calendar: ^3.1.2
-
 
 dev_dependencies:
   change_app_package_name: ^1.4.0
@@ -84,7 +84,7 @@ flutter:
     - family: Poppins
       fonts:
         - asset: assets/fonts/Poppins-Medium.ttf
-        
+
     - family: RobotoMono
       fonts:
         - asset: assets/fonts/RobotoMono-Bold.ttf
