--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   go_router: ^14.3.0
   iconly: ^1.0.1
   image_picker: ^1.1.2
+  intl: ^0.19.0
   logger: ^2.4.0
   modal_progress_hud_nsn: ^0.5.1
   table_calendar: ^3.1.2
