Update fonts and styles to use Nexa font family
Updated the font family across the application to Nexa, replacing the previous fonts like AfacadFlux, Inter, Poppins, and RobotoMono. Adjusted text styles, font sizes, and weights to ensure consistency and improve the overall design. Added the Nexa font files to the assets and configured them in `pubspec.yaml`.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,3 +91,14 @@ flutter:
     - family: RobotoMono
       fonts:
         - asset: assets/fonts/RobotoMono-Bold.ttf
+
+    - family: Nexa
+      fonts:
+        - asset: assets/fonts/NexaBold.otf
+          weight: 700
+        - asset: assets/fonts/Nexa-Heavy.ttf
+          weight: 800
+        - asset: assets/fonts/NexaLight.otf
+          weight: 500
+        - asset: assets/fonts/Nexa-ExtraLight.ttf
+          weight: 300
